--- a/.github/workflows/triggers.yml
+++ b/.github/workflows/triggers.yml
@@ -7,14 +7,14 @@ on:
     pull_request:
         types: [opened, synchronize, reopened]
     schedule:
-        - cron: '25 10 * * *'  # Se ejecuta todos los días a las 10:15 UTC
+        - cron: '35 10 * * *'  # Se ejecuta todos los días a las 10:15 UTC
 
 jobs:
     print-trigger:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout del código
-              run: actions/checkout@v3
+              uses: actions/checkout@v3
 
             - name: Configurar Python
               uses: actions/setup-python@v4
